--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -58,9 +58,9 @@
 
 
 .header42 {
-  width: 100%;
+  width: 100vw;
   box-shadow: 0 1px 0 rgba(0, 0, 0, 0.04);
-  background-color: var(--color-gray-550);
+  background-color: var(--color-gray-500);
 
   display: flex;
   flex-direction: row;
