--- a/src/pages/FriendsProfile1.css
+++ b/src/pages/FriendsProfile1.css
@@ -107,7 +107,7 @@
   width: 100%;
   position: relative;
   background-color: var(--color-black);
-  height: 762px;
+  height: 100%;
   overflow-y: auto;
   align-items: center;
   text-align: center;
