--- a/src/pages/Wallet.css
+++ b/src/pages/Wallet.css
@@ -103,7 +103,7 @@
   width: 100%;
   position: relative;
   background-color: var(--color-gray-500);
-  height: 800px;
+  height: 100%;
   overflow-y: auto;
   align-items: center;
   text-align: center;
