--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -264,3 +264,64 @@
   color: var(--color-red);
   font-family: var(--font-inter);
 }
+.wobble-image {
+  width: 300px;
+  transition: transform .2s;
+  filter: grayscale(.1);
+}
+
+@keyframes wobble-top {
+  0%,
+  100% {
+    transform: rotateX(0);
+  }
+  50% {
+    transform: rotateX(-20deg);
+  }
+}
+
+@keyframes wobble-bottom {
+  0%,
+  100% {
+    transform: rotateX(0);
+  }
+  50% {
+    transform: rotateX(20deg);
+  }
+}
+
+@keyframes wobble-left {
+  0%,
+  100% {
+    transform: rotateY(0);
+  }
+  50% {
+    transform: rotateY(-20deg);
+  }
+}
+
+@keyframes wobble-right {
+  0%,
+  100% {
+    transform: rotateY(0);
+  }
+  50% {
+    transform: rotateY(20deg);
+  }
+}
+
+.wobble-top {
+  animation: wobble-top .2s ease;
+}
+
+.wobble-bottom {
+  animation: wobble-bottom .2s ease;
+}
+
+.wobble-left {
+  animation: wobble-left .2s ease;
+}
+
+.wobble-right {
+  animation: wobble-right .2s ease;
+}
